k8s/storage/minio/minio-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.kwadwolabs.cloud`)
      kind: Rule
      services:
        - name: minio-console
          port: 9090
  tls:
    certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-api.kwadwolabs.cloud`)
      kind: Rule
      services:
        - name: minio
          port: 9000
  tls:
    certResolver: myresolver
